chore: use only java 17 features